salesforce-integration/Salesforce Components/objects/Riggo_API_Configuration__c/fields/Authorization_Header__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Header__c</fullName>
    <label>Authorization Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>