salesforce-integration/Salesforce Components/objects/Riggo_API_Configuration__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>